--- a/lab/all.tex
+++ b/lab/all.tex
@@ -28,8 +28,9 @@
 
 % подключаем файлы содержимого
 \include{cover}
+\include{ch00}
 \include{ch01}
-%\include{ch02}
+\include{ch02}
 %\include{ch03}
 %\include{ch04} 
 %\include{ch05}
