--- a/lab/ch01.tex
+++ b/lab/ch01.tex
@@ -1,36 +1,111 @@
-\chapter{Основи мережі Internet}
+\chapter{Основи OpenMP}
 \nopagebreak[4]
 \section*{Мета роботи}
-Вивчити основи роботи мережі Інтернет. Ознайомитись з роботою протоколу НТТР. Навчитися встановлювати необхідне програмне забезпечення для розробки сценаріїв на РНР.
+Ознайомитись зi спецiфiкацiєю OpenMP. Навчитись розробляти та виконувати програми, що використовують OpenMP.
+
 \nopagebreak[4]
-\section{Структура мережі Internet}
+\section{Теоретичнi вiдомостi}
+\subsection*{Вступ}
 \nopagebreak[4]
 
+Одним зi стандартiв для програмування систем з загальною пам’яттю є iнтерфейс (API) OpenMP(Open Multi-Processing). Цей стандарт реалiзовано для мов програмування C, C++ та Fortran на великiй кiлькостi комп’ютерних архітектур, включаючи платформи Unix та Microsoft Windows.
+
+OpenMP API складається з набору директив компiлятора pragma (прагм), функцiй та змiнних середовища, що впливають на поведiнку паралельної програми пiд час її виконання. Коли прагми OpenMP використовуються в програмi, вони дають вказiвки компiлятору створити виконуваний модуль, який буде виконуватись паралельно з викорстанням декiлькох потокiв.
+
+В OpenMP застосовується модель паралельного виконання, що отримала назву «розгалудження-злиття». Така програма починається як один потiк виконання, який називають начальним потоком. Коли потiк зустрiчає паралельну конструкцiю, вiн створює нову групу потокiв, що складається з цього потока та позитивного числа допоміжних потокiв, i стає головним в новiй групi. Всi члени нової групи виконують код в межах паралельної конструкцiї. В кiнцi такої конструкцiї є неявний бар’єр. Пiсля її виконання код програми продовжує лише головний потiк.
+
+\subsection*{Прагми OpenMP}
+\nopagebreak[4]
+
+Для активацiї пiдтримки прагм OpenMP в компiляторi необхiдно застосовувати додатковi параметри або флаги компiляцiї. Для Visual C++ таким параметром є /openmp, для gcc — \verb'-fopenmp'. Також у Visual C++ увiмкнути пiдтримку OpenMP можна за допомогою вiдповiдного параметру в дiалозi налаштування проекту: вибрати Configuration Properties, C/C++, Language i змiнити значення параметру «OpenMP Support» на yes. Для використання функцiй OpenMP необхiдно пiдключити до проекту файл \verb'vcomp.lib' (або \verb'vcompd.lib' в режимi вiдлагодження).
+
+Прагми OpenMP починаються зi слiв \verb'#pragma omp' i мають наступний формат:
+
+\verb'#pragma omp <директива> [список параметрiв]'
+
+OpenMP пiдтримує наступнi директиви: atomic, barrier, critical, flush, for, master, ordered, parallel, parallel for, section, sections та single, що визначають або механiзми роздiлення коду, або конструцiї синхронiзацiї. Необов’язковi параметри директиви уточнюють її поведiнку.
+Найбiльш уживана директива — parallel, яка має наступний синтаксис:
+\verb'#pragma omp parallel [список параметрiв]'. Структурований блок
+Вона iнформує компiлятор, що структурований блок (складений оператор) має виконуватись паралельно в кiлькох потоках. Як правило, кiлькiсть потокiв дорiвнює кiлькостi процесорiв в системi. В якостi прикладу розглянемо варiант класичної програми «Hello, world!» (див. \ref{code:hello}).
+
+\begin{lstlisting}[label=code:hello,caption=Програма Hello OpenMP!]
+#include <stdio.h>
+int   main ( )
+{
+	#pragma omp   parallel
+	{
+		printf ( " Hello ,  OpenMP!\n" ) ;
+	}   /* #pragma omp  parallel   */
+	return   0; 
+}   /*   int  main( )   */
+\end{lstlisting}
+
+На двопроцесорнiй системi результат роботи цiєї програми може бути наступним:
+
+\begin{verbatim}
+Hello, OpenMP! 
+Hello, OpenMP!
+\end{verbatim}
+
+\subsection*{Функцiї та змiннi середовища OpenMP}
+OpenMP пердбачає також набiр функцiй, що дозволяють:
+
+\begin{itemize}
+\item пiд час виконання програми отримувати та встановлювати рiзноманiтнi параметри, що визначають її поведiнку, наприклад, кiлькiсть потокiв, можливiсть вкладеного паралелiзму.
+\item застосовувати синхронiзацiю на основi замкiв (locks).
+Прототипи функцiй знаходяться в файлi omp.h. Розглянемо набiр функцiй OpenMP, що використовуються найчастiше.
+\end{itemize}
+
+Функцiя \verb'omp_get_thread_num()' повертає номер потоку, в якому була викликана. Головний потiк паралельного блоку має номер 0. Функцiя має наступний прототип:
+
+\verb'int omp_get_thread_num(void)'
+
+Функцiя \verb'omp_set_num_threads()' має наступний прототип:
+
+\verb'void omp_set_num_threads(int num_threads)'
+
+i використовується для встановлення кiлькостi потокiв, що будуть виконуватись в наступному паралельному блоцi. Для визначення поточної кiлькостi паралельних потокiв застосовується функцiя \verb'omp_get_num_threads()' з наступним прототипом:
+
+\verb'int omp_get_num_threads(void)'
+В лiстiнгу \ref{code:fun1} наведено текст програми, що демонструє використання розглянутих функцiй.
+\begin{lstlisting}[label=code:fun1,caption=Функцiї OpenMP]
+#include <stdio.h> 
+#include <omp.h>
+int   main ()
+{
+	omp_set_num_threads (5) ;
+	#pragma omp   parallel
+	{
+		printf ( " Hello ,  OpenMP! ( thread  num=%d) \n", 
+		omp_get_thread_num () ) ; 
+	}   /* #pragma omp  parallel   */
+	return   0;
+}  /*   int  main()   */
+\end{lstlisting}
+
+В стандартi OpenMP визначено ряд змiнних середовища операцiйної системи, якi контролюють поведiнку OpenMP-програм. Зокрема, змiнна \verb'OMP_NUM_THREADS' визначає максимальну кiлькiсть потокiв, що будуть виконуватись в паралельнiй програмi. Наприклад, в командному рядку Windows необхідно виконати наступну команду:
+
+\verb'set OMP_NUM_THREADS=4'
+
+Таким чином, за допомогою функцiї \verb'omp_set_num_threads()' або змінної середовища \verb'OMP_NUM_THREADS' можна встановити довільну кiлькiсть потокiв, що будуть створюватись пiд час виконання OpenMP-програм.
 
 \section{Індивідуальне завдання}
 \nopagebreak[4]
 \subsection*{Завдання до лабораторної роботи}
 \nopagebreak[4]
 \begin{enumerate}
-\item Вивчити теоретичний матеріал
-\item Відповісти на контрольні запитання
-\item Скласти звіт
-\item Захистити роботу
+\item Виконати програми, наведенi в лiстiнгах \ref{code:fun1} та \ref{code:hello}.
+\item Змiнити програму з лiстiнгу \ref{code:fun1} таким чином, щоб кiлькiсть потокiв вказувалась користувачем програми.
+\item Розробити програму, в якiй парнi потоки друкують «Hello, OpenMP!», а непарнi — iм’я та призвiще студента.
+
 \end{enumerate}
 
 \subsection*{Контрольні запитання}
 \nopagebreak[4]
 \begin{enumerate}
-\item Що таке Internet? З яких структурних частин складається Internet?
-\item Що таке IP-адреса?
-\item Що таке доменне ім'я, з чого воно складається?
-\item Який сервіс Internet перетворює IP-адреси в доменні імена і навпаки?
-\item Яка служба займається розподіленням блоків IP-адрес?
-\item Протокол HTTP. Рівень у моделі OSI, призначення.
-\item Значення URI, URL, URN.
-\item Мови web-програмування, які ви знаєте.
-\item Веб-сервери, які ви знаєте.
-\item Мережеві СКБД, які ви знаєте. 
+\item Для програмування яких обчислювальних систем — з розподiленною чи загальною пам’яттю — використовується стандарт OpenMP?
+\item Назвiть складовi частини стандарту OpenMP.
+
 \end{enumerate}
 
 
