--- a/lab/ch02.tex
+++ b/lab/ch02.tex
@@ -1,36 +1,156 @@
-\chapter{Основи мережі Internet}
+\chapter{Розпаралелювання коду в OpenMP}
 \nopagebreak[4]
 \section*{Мета роботи}
-Вивчити основи роботи мережі Інтернет. Ознайомитись з роботою протоколу НТТР. Навчитися встановлювати необхідне програмне забезпечення для розробки сценаріїв на РНР.
+Ознайомитись з засобами OpenMP для розпаралелювання коду. Навчитись розробляти та виконувати програми, що використовують OpenMP.
+
 \nopagebreak[4]
-\section{Структура мережі Internet}
+\section{Теоретичнi вiдомостi}
+\subsection*{Директива for}
 \nopagebreak[4]
 
+Однiєю з директив, що застосовується досить часто, є директива for, яка належить до директив розподiлення роботи (work-sharing directive). Ця директива iнформує компiлятор, що при виконаннi циклу for в паралельному блоцi iтерацiї циклу мають бути розподiленi мiж потоками групи. Розглянемо роботу директиви for на прикладi програми, текст якої наведено в лiстiнгу \ref{code:for}.
+
+\begin{lstlisting}[label=code:for,caption=Застосування директиви for]
+#include <stdio.h>
+#include <omp.h> 
+int main() 
+	{
+	int i;
+	#pragma omp parallel
+		{ 
+		#pragma omp  for
+		for (i = 0;   i  <  5;   i++)
+		printf ( "thread N%d i=%d\n", omp_get_thread_num () , i ) ;
+		}  /* #pragma omp  parallel   */
+	return 0;
+}
+\end{lstlisting}
+Результат роботи програми наведено нижче:
+
+\begin{verbatim}
+thread N1 i=3 
+thread N1 i=4 
+thread N0 i=0 
+thread N0 i=1 
+thread N0 i=2
+\end{verbatim}
+
+Порядок появи рядкiв на екранi може бути довiльним i змiнюватись при кожному запуску програми. Якщо з тексту програми вилучити директиву \verb'#pragma omp for', то кожний потiк буде виконувати повний цикл for.
+
+У зв’язку з тим, що розпаралелювання коду найчастiше виконується саме в циклiчних конструкцiях, OpenMP має скорочений варiант запису комбiнацiї директив  \verb'#pragma omp parallel' i \verb'#pragma omp for':
+\verb'#pragma omp parallel for for(i = 0; i < 5; ++i)'
+
+
+Слiд пiдкреслити, що розпаралелюватись можуть лише такi циклi, в яких iтерацiї не мають залежностей одна вiд одної. Якщо цикл не  має залежностей, компiлятор має змогу виконати цикл в любому порядку, навiть паралельно. Також цикли, якi OpenMP може розпаралелювати, мають вiдповiдати наступному формату:
+
+\begin{itemize}
+\item \verb'for(цiлий тип i = iнварiант циклу1;'
+\item \verb'i {<,>,=,!=,<=,>=} iнварiант циклу2;' 
+\item \verb'i {+,-}= iнварiант циклу3)'
+\end{itemize}
+
+Цi вимоги введенi для того, щоб OpenMP мiг визначити кiлькiсть iтерацiй циклу. При розробцi паралельних програм необхiдно враховувати, якi змiннi є спiльними (shared), а якi приватними (private). Спiльнi змiннi доступнi всiм потокам в групi, тому змiна значеннь таких змiнних в одному потоцi стає видимою в iнших потоках. Що стосується приватних змiних, то кожний потiк має окремi їх копiї, тому їх змiна в одному потоцi не вiдображається на iнших потоках. За замовчуванням всi змiннi в паралельному блоцi є спiльними. Лише в трьох випадках змiннi є приватними. По-перше, приватними є iндекси паралельних циклiв. По-друге, приватними є локальнi змiннi паралельних блокiв. По-третє, приватними стають змiннi, що вказанi в параметрах private, firstprivate, lastprivate и reduction прагми for.
+
+Параметр private вказує, що для кожного потоку має бути створена локальна копiя кожної змiнної, що вказана в списку. Приватнi копiї будут iнiцiалiзуватись значенням за замовчанням, при можливостi буде застосовуватись конструктор за замовчанням.
+
+Параметр firstprivate виконує аналогiчнi дiї, однак перед виконанням паралельного блоку вiн копiює значення приватної змiнної в кожний потiк, застосовуючи при необхiдностi конструктор копiй.
+
+Параметр lastprivate теж подiбний до параметра private, однак пiсля виконання останньої iтерацiї циклу або конструкцiї паралельного блоку значення змiнних, що вказанi в списку цього параметра, привласнюються змiнним основного потоку. При цьому може застосовуватись оператор привласнювання копiй.
+Параметр reduction в якостi аргументiв приймає змiнну й оператор. Оператори, що пiдтримуються reduction, наведенi в табл. \ref{tab:table1}, а змiнна має бути скалярною (наприклад, int або float). Змiнна параметру reduction iнiцiалiзується значенням, що вказане в табл. \ref{tab:table1}. Пiсля завершення паралельного блоку вказаний оператор застосовується до кожної приватної копiї i початкового значеннi змiнної.
+
+	
+\begin{longtable}[t]{|l|p{20em}|}
+
+\caption{Оператори параметру reduction} \label{tab:table1}\\
+\hline
+
+Оператор reduction & Iнiцiалiзацiйне значення змiнної \\
+\hline
+
+
+\verb|+| & 0 \\
+\verb|*| & 1 \\
+\verb|-| & 0 \\
+\verb|&| & \~0 (усi бiти в змiннiй встановленi) \\
+\verb'|' & 0 \\
+\verb|^| & 0 \\
+\verb|&&| & 0 \\
+\verb|||| & 0 \\
+
+\hline
+\end{longtable}
+
+В лiстiнгу \ref{code:for1} наведено програму, що використовує розглянутi параметри. 
+
+\begin{lstlisting}[label=code:for1,caption=Параметри прагми for]
+#include <stdio . h>
+#include <omp.h> 
+int   main () 
+{
+int i, j;
+int array[] = {1, 2, 3, 4, 5, 6, 7, 8, 9};
+int sum; 
+#pragma omp   parallel
+{ 
+	#pragma omp for firstprivate(j)   \
+	lastprivate(i)   \
+	reduction (+: sum)
+	for (i = 0; i<sizeof (array)/ sizeof (array[0]); i++)
+	{
+		long   private = i; 
+		sum += array[i];
+	}   /*	for(i = 0;   i  <  5;   i++) */
+	}  /* #pragma omp  parallel   */
+printf("%d\n", sum);
+return 0; 
+}
+\end{lstlisting}
+В цьому лiстiнгу змiнна i є приватною тому, що вона є змiнною циклу for, а також тому, що вказана в параметрi lastprivate. Змiнна j примусово зроблена приватною за допомогою firstprivate. Змiнна private також є приватною через те, що вона оголошена в паралельному блоцi. В кожному потоцi екземпляр приватної змiнної sum неявно iнiцiалiзується нулем.
+
+\subsection*{Директива sections}
+Як правило, OpenMP застосовується для розпаралелювання циклiв. Однак, в OpenMP є також засоби для пiдтримки паралелiзму на рiвнi функцiй. Цей механiзм називається секцiями OpenMP (OpenMP sections). Для створення паралельного блоку секцiй застосовується директива \verb'#pragma omp sections', або, аналогiчно директивi \verb'#pragma omp parallel for', її скорочений варiант \verb'#pragma omp parallel sections'. Секцiї в блоцi створюються директивой \verb'#pragma omp section'. Кожнiй секцiї ставиться у вiдповiднiсть один потiк, i всi секцiї виконуються паралельно. Фрагмент програми, що демонструє розпаралелювання на рiвнi функцiй наведено в лiстiнгу \ref{code:sect1}. 
+
+\begin{lstlisting}[label=code:sect1,caption=Директива omp section]
+void quickSort(int L, int R) 
+{
+int i;
+if (R > L)
+	{
+	i = partition (L,  R); 
+	#pragma omp parallel sections
+		{
+		#pragma omp section
+		quickSort(L,   i -  1);
+		#pragma omp  section
+		quickSort( i  + 1, R);
+		}   /* #pragma omp   parallel   sections   */
+	}   /*	if   (R>  l)   */
+}   /*   void   quickSort(int   l ,   int   r)   */
+\end{lstlisting}
 
 \section{Індивідуальне завдання}
 \nopagebreak[4]
 \subsection*{Завдання до лабораторної роботи}
 \nopagebreak[4]
 \begin{enumerate}
-\item Вивчити теоретичний матеріал
-\item Відповісти на контрольні запитання
-\item Скласти звіт
-\item Захистити роботу
+\item Виконати програми, наведенi в лiстiнгах \ref{code:for1} та \ref{code:sect1}.
+\item Розробити програму для обчислення добутку елементiв масиву.
+\item Написати програму, що складається з двох потокiв, з яких один обчислює суму, а iнший добуток елементiв масиву. Для створення потокiв використовувати механiзм секцiй.
+
+
 \end{enumerate}
 
 \subsection*{Контрольні запитання}
 \nopagebreak[4]
 \begin{enumerate}
-\item Що таке Internet? З яких структурних частин складається Internet?
-\item Що таке IP-адреса?
-\item Що таке доменне ім'я, з чого воно складається?
-\item Який сервіс Internet перетворює IP-адреси в доменні імена і навпаки?
-\item Яка служба займається розподіленням блоків IP-адрес?
-\item Протокол HTTP. Рівень у моделі OSI, призначення.
-\item Значення URI, URL, URN.
-\item Мови web-програмування, які ви знаєте.
-\item Веб-сервери, які ви знаєте.
-\item Мережеві СКБД, які ви знаєте. 
+\item Якими директивами виконується розпаралелювання циклiв в OpenMP?
+\item Якi змiннi в паралельних блоках є спiльними, а якi — приватними?
+\item Яким чином дiє параметр \verb'private'?
+\item Яким чином дiє параметр \verb'firstprivate'?
+\item Яким чином дiє параметр \verb'lastprivate'?
+\item Яким чином дiє параметр \verb'reduction'?
+\item Якi оператори можуть застосовуватись з параметром \verb'reduction'?
+\item Яким чином виконується розпаралелювання коду на рiвнi \verb'функцiй'?
 \end{enumerate}
 
 
