--- a/lab/cover.tex
+++ b/lab/cover.tex
@@ -16,7 +16,7 @@
 \vspace{10em}
 
 \begin{center}
-\Large Курс лекції \\ з дисципліни
+\Large Завдання для виконання \\ на лабораторних роботах \\ з дисципліни
 \end{center}
 
 \vspace{2em}
